@@ -80,6 +80,7 @@ public class MediaFixedTest extends AbstractRuntimeTest
 		assertEquals(Condition.TRUE,        item.photo.contentTypeEqual("image/jpeg"));
 		assertEquals(Condition.FALSE,       item.photo.contentTypeEqual("major/minor"));
 		assertEquals(lastModified.isNull(), item.photo.contentTypeEqual(null));
+		assertNotNull(item.photo.bodyMismatchesContentType());
 		
 		// test persistence
 
