@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* Console allows checking Media ContentType against body using magic numbers
 * rename Media.contentTypeMajor to contentTypeSub
 * Media with default Content-Type or major Content-Type do restrict the
 	CharSet of the StringField storing the Content-Type. You may need to adjust
